// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Props checkStrictly 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props checkable default 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props checkable without selectable 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props custom switcher icon switcher icon 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    >
      <span>
        switcherIconFromNode0-1
      </span>
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props custom switcher icon switcher leaf icon 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    >
      <span>
        switcherLeafIcon
      </span>
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    >
      <span>
        switcherLeafIconFromNode0-1
      </span>
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIcon
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        >
          <span>
            switcherLeafIconFromNode0-2-1
          </span>
        </span>
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    >
      <span>
        switcherLeafIcon
      </span>
    </span>
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props data and aria props renders aria attributes 1`] = `
<ul
  aria-label="name"
  class="rc-tree"
  role="tree"
  unselectable="on"
/>
`;

exports[`Tree Props data and aria props renders data attributes 1`] = `
<ul
  class="rc-tree"
  data-test="tree"
  role="tree"
  unselectable="on"
/>
`;

exports[`Tree Props defaultExpandAll 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props disabled basic 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props disabled treeNode not disabled 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props icon 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__customize"
      >
        <span>
          ROOT ICON
        </span>
      </span>
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__customize"
          >
            <span>
              CUSTOMIZE ICON
            </span>
          </span>
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props invalidate checkedKeys null 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props invalidate checkedKeys number 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props loadData basic 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_close"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props multiple 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props prefixCls 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
/>
`;

exports[`Tree Props prefixCls 2`] = `
<ul
  class="test-prefix"
  role="tree"
  unselectable="on"
/>
`;

exports[`Tree Props selectable with selectable 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props selectable without selectable 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props showIcon 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__close"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props showIcon 2`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="---"
    >
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props showIcon 3`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="rc-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="rc-tree-treenode-switcher-close"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Props showLine 1`] = `
<ul
  class="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
/>
`;

exports[`Tree Props treeData 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="T0"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        T0
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="T1"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        T1
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="T10"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            T10
          </span>
        </span>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="T11"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            T11
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="T110"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                T110
              </span>
            </span>
          </li>
          <li
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="T111"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                T111
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="T12"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            T12
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Props treeData 2`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="T0"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        T0
      </span>
    </span>
  </li>
</ul>
`;
